tests/invalid/set_update_missing_elem_eq/main.py
def run_case() -> None:
    a: set[set[int]] = set()
    b: set[set[int]] = set()
    a.update(b)


if __name__ == "__main__":
    run_case()
